python/src/antlr4/.antlr/gec_parserParser.java
// Generated from /home/alex/ProcesadoresLenguaje/python/src/antlr4/gec_parser.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class gec_parserParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		DEFINE=1, SETUP=2, WORLD=3, ADD=4, APPEND=5, SCENE=6, FOR=7, FROM=8, TO=9, 
		IN=10, CHUNK=11, GAMEOBJECT=12, LIST=13, INT=14, FLOAT=15, STRING=16, 
		LPAREN=17, RPAREN=18, LBRACE=19, RBRACE=20, LSQUARE=21, RSQUARE=22, COMMA=23, 
		LT=24, GT=25, ASSIGN=26, OP_ARIT=27, ID=28, INT_LITERAL=29, FLOAT_LITERAL=30, 
		STRING_LITERAL=31, COMMENT=32, BLOCK_COMMENT=33, WS=34;
	public static final int
		RULE_program = 0, RULE_define_setup = 1, RULE_define_world = 2, RULE_define_scene = 3, 
		RULE_statement = 4, RULE_chunk_constructor = 5, RULE_gameobject_constructor = 6, 
		RULE_define_list = 7, RULE_array = 8, RULE_append_statement = 9, RULE_add_statement = 10, 
		RULE_for_loop_number = 11, RULE_for_loop_list = 12, RULE_assignment = 13, 
		RULE_expression = 14, RULE_expression_aux = 15, RULE_declaration = 16;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "define_setup", "define_world", "define_scene", "statement", 
			"chunk_constructor", "gameobject_constructor", "define_list", "array", 
			"append_statement", "add_statement", "for_loop_number", "for_loop_list", 
			"assignment", "expression", "expression_aux", "declaration"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'DEFINE'", "'SETUP'", "'WORLD'", "'ADD'", "'APPEND'", "'SCENE'", 
			"'FOR'", "'FROM'", "'TO'", "'IN'", "'CHUNK'", "'GAMEOBJECT'", "'LIST'", 
			"'INT'", "'FLOAT'", "'STRING'", "'('", "')'", "'{'", "'}'", "'['", "']'", 
			"','", "'<'", "'>'", "'='"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "DEFINE", "SETUP", "WORLD", "ADD", "APPEND", "SCENE", "FOR", "FROM", 
			"TO", "IN", "CHUNK", "GAMEOBJECT", "LIST", "INT", "FLOAT", "STRING", 
			"LPAREN", "RPAREN", "LBRACE", "RBRACE", "LSQUARE", "RSQUARE", "COMMA", 
			"LT", "GT", "ASSIGN", "OP_ARIT", "ID", "INT_LITERAL", "FLOAT_LITERAL", 
			"STRING_LITERAL", "COMMENT", "BLOCK_COMMENT", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "gec_parser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public gec_parserParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public Define_setupContext define_setup() {
			return getRuleContext(Define_setupContext.class,0);
		}
		public Define_worldContext define_world() {
			return getRuleContext(Define_worldContext.class,0);
		}
		public TerminalNode EOF() { return getToken(gec_parserParser.EOF, 0); }
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(34);
			define_setup();
			setState(35);
			define_world();
			setState(36);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Define_setupContext extends ParserRuleContext {
		public TerminalNode DEFINE() { return getToken(gec_parserParser.DEFINE, 0); }
		public TerminalNode SETUP() { return getToken(gec_parserParser.SETUP, 0); }
		public TerminalNode LPAREN() { return getToken(gec_parserParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(gec_parserParser.RPAREN, 0); }
		public TerminalNode LBRACE() { return getToken(gec_parserParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(gec_parserParser.RBRACE, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public Define_setupContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_define_setup; }
	}

	public final Define_setupContext define_setup() throws RecognitionException {
		Define_setupContext _localctx = new Define_setupContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_define_setup);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(38);
			match(DEFINE);
			setState(39);
			match(SETUP);
			setState(40);
			match(LPAREN);
			setState(41);
			match(RPAREN);
			setState(42);
			match(LBRACE);
			setState(46);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 268564656L) != 0)) {
				{
				{
				setState(43);
				statement();
				}
				}
				setState(48);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(49);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Define_worldContext extends ParserRuleContext {
		public TerminalNode DEFINE() { return getToken(gec_parserParser.DEFINE, 0); }
		public TerminalNode WORLD() { return getToken(gec_parserParser.WORLD, 0); }
		public TerminalNode LPAREN() { return getToken(gec_parserParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(gec_parserParser.RPAREN, 0); }
		public TerminalNode LBRACE() { return getToken(gec_parserParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(gec_parserParser.RBRACE, 0); }
		public TerminalNode STRING_LITERAL() { return getToken(gec_parserParser.STRING_LITERAL, 0); }
		public TerminalNode ID() { return getToken(gec_parserParser.ID, 0); }
		public List<Define_sceneContext> define_scene() {
			return getRuleContexts(Define_sceneContext.class);
		}
		public Define_sceneContext define_scene(int i) {
			return getRuleContext(Define_sceneContext.class,i);
		}
		public Define_worldContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_define_world; }
	}

	public final Define_worldContext define_world() throws RecognitionException {
		Define_worldContext _localctx = new Define_worldContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_define_world);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(51);
			match(DEFINE);
			setState(52);
			match(WORLD);
			setState(53);
			match(LPAREN);
			setState(54);
			_la = _input.LA(1);
			if ( !(_la==ID || _la==STRING_LITERAL) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(55);
			match(RPAREN);
			setState(56);
			match(LBRACE);
			setState(60);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==DEFINE) {
				{
				{
				setState(57);
				define_scene();
				}
				}
				setState(62);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(63);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Define_sceneContext extends ParserRuleContext {
		public TerminalNode DEFINE() { return getToken(gec_parserParser.DEFINE, 0); }
		public TerminalNode SCENE() { return getToken(gec_parserParser.SCENE, 0); }
		public TerminalNode LPAREN() { return getToken(gec_parserParser.LPAREN, 0); }
		public List<TerminalNode> COMMA() { return getTokens(gec_parserParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(gec_parserParser.COMMA, i);
		}
		public TerminalNode RPAREN() { return getToken(gec_parserParser.RPAREN, 0); }
		public TerminalNode LBRACE() { return getToken(gec_parserParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(gec_parserParser.RBRACE, 0); }
		public TerminalNode STRING_LITERAL() { return getToken(gec_parserParser.STRING_LITERAL, 0); }
		public List<TerminalNode> ID() { return getTokens(gec_parserParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(gec_parserParser.ID, i);
		}
		public List<TerminalNode> INT_LITERAL() { return getTokens(gec_parserParser.INT_LITERAL); }
		public TerminalNode INT_LITERAL(int i) {
			return getToken(gec_parserParser.INT_LITERAL, i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public Define_sceneContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_define_scene; }
	}

	public final Define_sceneContext define_scene() throws RecognitionException {
		Define_sceneContext _localctx = new Define_sceneContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_define_scene);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(65);
			match(DEFINE);
			setState(66);
			match(SCENE);
			setState(67);
			match(LPAREN);
			setState(68);
			_la = _input.LA(1);
			if ( !(_la==ID || _la==STRING_LITERAL) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(69);
			match(COMMA);
			setState(70);
			_la = _input.LA(1);
			if ( !(_la==ID || _la==INT_LITERAL) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(71);
			match(COMMA);
			setState(72);
			_la = _input.LA(1);
			if ( !(_la==ID || _la==INT_LITERAL) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(73);
			match(RPAREN);
			setState(74);
			match(LBRACE);
			setState(78);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 268564656L) != 0)) {
				{
				{
				setState(75);
				statement();
				}
				}
				setState(80);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(81);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public AssignmentContext assignment() {
			return getRuleContext(AssignmentContext.class,0);
		}
		public Define_listContext define_list() {
			return getRuleContext(Define_listContext.class,0);
		}
		public Append_statementContext append_statement() {
			return getRuleContext(Append_statementContext.class,0);
		}
		public For_loop_numberContext for_loop_number() {
			return getRuleContext(For_loop_numberContext.class,0);
		}
		public For_loop_listContext for_loop_list() {
			return getRuleContext(For_loop_listContext.class,0);
		}
		public DeclarationContext declaration() {
			return getRuleContext(DeclarationContext.class,0);
		}
		public Add_statementContext add_statement() {
			return getRuleContext(Add_statementContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_statement);
		try {
			setState(90);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(83);
				assignment();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(84);
				define_list();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(85);
				append_statement();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(86);
				for_loop_number();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(87);
				for_loop_list();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(88);
				declaration();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(89);
				add_statement();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Chunk_constructorContext extends ParserRuleContext {
		public TerminalNode CHUNK() { return getToken(gec_parserParser.CHUNK, 0); }
		public TerminalNode LPAREN() { return getToken(gec_parserParser.LPAREN, 0); }
		public List<TerminalNode> COMMA() { return getTokens(gec_parserParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(gec_parserParser.COMMA, i);
		}
		public TerminalNode RPAREN() { return getToken(gec_parserParser.RPAREN, 0); }
		public List<TerminalNode> ID() { return getTokens(gec_parserParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(gec_parserParser.ID, i);
		}
		public List<TerminalNode> INT_LITERAL() { return getTokens(gec_parserParser.INT_LITERAL); }
		public TerminalNode INT_LITERAL(int i) {
			return getToken(gec_parserParser.INT_LITERAL, i);
		}
		public List<TerminalNode> FLOAT_LITERAL() { return getTokens(gec_parserParser.FLOAT_LITERAL); }
		public TerminalNode FLOAT_LITERAL(int i) {
			return getToken(gec_parserParser.FLOAT_LITERAL, i);
		}
		public TerminalNode STRING_LITERAL() { return getToken(gec_parserParser.STRING_LITERAL, 0); }
		public ArrayContext array() {
			return getRuleContext(ArrayContext.class,0);
		}
		public Chunk_constructorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_chunk_constructor; }
	}

	public final Chunk_constructorContext chunk_constructor() throws RecognitionException {
		Chunk_constructorContext _localctx = new Chunk_constructorContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_chunk_constructor);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(92);
			match(CHUNK);
			setState(93);
			match(LPAREN);
			setState(94);
			_la = _input.LA(1);
			if ( !(_la==ID || _la==INT_LITERAL) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(95);
			match(COMMA);
			setState(96);
			_la = _input.LA(1);
			if ( !(_la==ID || _la==INT_LITERAL) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(97);
			match(COMMA);
			setState(98);
			_la = _input.LA(1);
			if ( !(_la==ID || _la==FLOAT_LITERAL) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(99);
			match(COMMA);
			setState(100);
			_la = _input.LA(1);
			if ( !(_la==ID || _la==FLOAT_LITERAL) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(101);
			match(COMMA);
			setState(102);
			_la = _input.LA(1);
			if ( !(_la==ID || _la==STRING_LITERAL) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(103);
			match(COMMA);
			setState(106);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ID:
				{
				setState(104);
				match(ID);
				}
				break;
			case LSQUARE:
				{
				setState(105);
				array();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(108);
			match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Gameobject_constructorContext extends ParserRuleContext {
		public TerminalNode GAMEOBJECT() { return getToken(gec_parserParser.GAMEOBJECT, 0); }
		public TerminalNode LPAREN() { return getToken(gec_parserParser.LPAREN, 0); }
		public List<TerminalNode> COMMA() { return getTokens(gec_parserParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(gec_parserParser.COMMA, i);
		}
		public TerminalNode RPAREN() { return getToken(gec_parserParser.RPAREN, 0); }
		public List<TerminalNode> ID() { return getTokens(gec_parserParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(gec_parserParser.ID, i);
		}
		public TerminalNode STRING_LITERAL() { return getToken(gec_parserParser.STRING_LITERAL, 0); }
		public TerminalNode INT_LITERAL() { return getToken(gec_parserParser.INT_LITERAL, 0); }
		public List<TerminalNode> FLOAT_LITERAL() { return getTokens(gec_parserParser.FLOAT_LITERAL); }
		public TerminalNode FLOAT_LITERAL(int i) {
			return getToken(gec_parserParser.FLOAT_LITERAL, i);
		}
		public Gameobject_constructorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_gameobject_constructor; }
	}

	public final Gameobject_constructorContext gameobject_constructor() throws RecognitionException {
		Gameobject_constructorContext _localctx = new Gameobject_constructorContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_gameobject_constructor);
		int _la;
		try {
			setState(128);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(110);
				match(GAMEOBJECT);
				setState(111);
				match(LPAREN);
				setState(112);
				_la = _input.LA(1);
				if ( !(_la==ID || _la==STRING_LITERAL) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(113);
				match(COMMA);
				setState(114);
				_la = _input.LA(1);
				if ( !(_la==ID || _la==INT_LITERAL) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(115);
				match(COMMA);
				setState(116);
				_la = _input.LA(1);
				if ( !(_la==ID || _la==FLOAT_LITERAL) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(117);
				match(COMMA);
				setState(118);
				_la = _input.LA(1);
				if ( !(_la==ID || _la==FLOAT_LITERAL) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(119);
				match(RPAREN);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(120);
				match(GAMEOBJECT);
				setState(121);
				match(LPAREN);
				setState(122);
				_la = _input.LA(1);
				if ( !(_la==ID || _la==STRING_LITERAL) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(123);
				match(COMMA);
				setState(124);
				_la = _input.LA(1);
				if ( !(_la==ID || _la==INT_LITERAL) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(125);
				match(COMMA);
				setState(126);
				_la = _input.LA(1);
				if ( !(_la==ID || _la==FLOAT_LITERAL) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(127);
				match(RPAREN);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Define_listContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(gec_parserParser.ID, 0); }
		public TerminalNode ASSIGN() { return getToken(gec_parserParser.ASSIGN, 0); }
		public ArrayContext array() {
			return getRuleContext(ArrayContext.class,0);
		}
		public TerminalNode LIST() { return getToken(gec_parserParser.LIST, 0); }
		public TerminalNode LT() { return getToken(gec_parserParser.LT, 0); }
		public TerminalNode GT() { return getToken(gec_parserParser.GT, 0); }
		public TerminalNode CHUNK() { return getToken(gec_parserParser.CHUNK, 0); }
		public TerminalNode GAMEOBJECT() { return getToken(gec_parserParser.GAMEOBJECT, 0); }
		public Define_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_define_list; }
	}

	public final Define_listContext define_list() throws RecognitionException {
		Define_listContext _localctx = new Define_listContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_define_list);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(135);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case LIST:
				{
				setState(130);
				match(LIST);
				setState(131);
				match(LT);
				setState(132);
				_la = _input.LA(1);
				if ( !(_la==CHUNK || _la==GAMEOBJECT) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(133);
				match(GT);
				}
				break;
			case ID:
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(137);
			match(ID);
			setState(138);
			match(ASSIGN);
			setState(139);
			array();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ArrayContext extends ParserRuleContext {
		public TerminalNode LSQUARE() { return getToken(gec_parserParser.LSQUARE, 0); }
		public TerminalNode RSQUARE() { return getToken(gec_parserParser.RSQUARE, 0); }
		public List<TerminalNode> ID() { return getTokens(gec_parserParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(gec_parserParser.ID, i);
		}
		public List<Chunk_constructorContext> chunk_constructor() {
			return getRuleContexts(Chunk_constructorContext.class);
		}
		public Chunk_constructorContext chunk_constructor(int i) {
			return getRuleContext(Chunk_constructorContext.class,i);
		}
		public List<Gameobject_constructorContext> gameobject_constructor() {
			return getRuleContexts(Gameobject_constructorContext.class);
		}
		public Gameobject_constructorContext gameobject_constructor(int i) {
			return getRuleContext(Gameobject_constructorContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(gec_parserParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(gec_parserParser.COMMA, i);
		}
		public ArrayContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_array; }
	}

	public final ArrayContext array() throws RecognitionException {
		ArrayContext _localctx = new ArrayContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_array);
		int _la;
		try {
			setState(161);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(141);
				match(LSQUARE);
				setState(145);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case ID:
					{
					setState(142);
					match(ID);
					}
					break;
				case CHUNK:
					{
					setState(143);
					chunk_constructor();
					}
					break;
				case GAMEOBJECT:
					{
					setState(144);
					gameobject_constructor();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(155);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(147);
					match(COMMA);
					setState(151);
					_errHandler.sync(this);
					switch (_input.LA(1)) {
					case ID:
						{
						setState(148);
						match(ID);
						}
						break;
					case CHUNK:
						{
						setState(149);
						chunk_constructor();
						}
						break;
					case GAMEOBJECT:
						{
						setState(150);
						gameobject_constructor();
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					}
					}
					setState(157);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(158);
				match(RSQUARE);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(159);
				match(LSQUARE);
				setState(160);
				match(RSQUARE);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Append_statementContext extends ParserRuleContext {
		public TerminalNode APPEND() { return getToken(gec_parserParser.APPEND, 0); }
		public List<TerminalNode> ID() { return getTokens(gec_parserParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(gec_parserParser.ID, i);
		}
		public Gameobject_constructorContext gameobject_constructor() {
			return getRuleContext(Gameobject_constructorContext.class,0);
		}
		public Chunk_constructorContext chunk_constructor() {
			return getRuleContext(Chunk_constructorContext.class,0);
		}
		public Append_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_append_statement; }
	}
